--- a/PL_Python_1_exercicio.ipynb
+++ b/PL_Python_1_exercicio.ipynb
@@ -1,19 +1,4 @@
 {
-  "nbformat": 4,
-  "nbformat_minor": 0,
-  "metadata": {
-    "colab": {
-      "name": "PL_Python_1_exercicio.ipynb",
-      "provenance": []
-    },
-    "kernelspec": {
-      "name": "python3",
-      "display_name": "Python 3"
-    },
-    "language_info": {
-      "name": "python"
-    }
-  },
   "cells": [
     {
       "cell_type": "markdown",
@@ -63,6 +48,7 @@
     },
     {
       "cell_type": "code",
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -70,22 +56,21 @@
         "id": "xBjopVrbVgb5",
         "outputId": "b4eecce9-1bb2-49e8-9a1f-0d8cb99354bc"
       },
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "True\n"
+          ]
+        }
+      ],
       "source": [
         "import random; from random import choices; import string; random.seed(1234)\n",
         "import numpy as np\n",
         "letras = choices(string.ascii_lowercase,k=100)\n",
         "lista = random.sample(range(1, 10000), 1000)\n",
         "print(np.array(lista).sum() == 5244799) # precisa retornar True!"
-      ],
-      "execution_count": null,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "text": [
-            "True\n"
-          ],
-          "name": "stdout"
-        }
       ]
     },
     {
@@ -99,14 +84,14 @@
     },
     {
       "cell_type": "code",
+      "execution_count": null,
       "metadata": {
         "id": "8KlbNKnHR6VZ"
       },
+      "outputs": [],
       "source": [
         "# seu código"
-      ],
-      "execution_count": null,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "markdown",
@@ -119,14 +104,14 @@
     },
     {
       "cell_type": "code",
+      "execution_count": null,
       "metadata": {
         "id": "D5HtxhSKagDu"
       },
+      "outputs": [],
       "source": [
         "# seu código"
-      ],
-      "execution_count": null,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "markdown",
@@ -139,14 +124,14 @@
     },
     {
       "cell_type": "code",
+      "execution_count": null,
       "metadata": {
         "id": "8-6xfJ92agcF"
       },
+      "outputs": [],
       "source": [
         "# seu código"
-      ],
-      "execution_count": null,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "markdown",
@@ -161,14 +146,14 @@
     },
     {
       "cell_type": "code",
+      "execution_count": null,
       "metadata": {
         "id": "48y8A-6Cag6I"
       },
+      "outputs": [],
       "source": [
         "# seu código"
-      ],
-      "execution_count": null,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "markdown",
@@ -181,14 +166,52 @@
     },
     {
       "cell_type": "code",
+      "execution_count": 1,
       "metadata": {
         "id": "LnOxIdHWahaI"
       },
-      "source": [
-        "# seu código"
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "{'Beatriz': 1978, 'Henrique': 2004, 'Adriana': 1984, 'Daniel': 1996, 'Clara': 1999}\n"
+          ]
+        }
       ],
-      "execution_count": null,
-      "outputs": []
+      "source": [
+        "# seu código\n",
+        "\n",
+        "aniversarios = {'Beatriz':1978, 'Henrique':2004, 'Adriana':1984, 'Daniel':1996}\n",
+        "\n",
+        "aniversarios['Clara'] = 1999\n",
+        "\n",
+        "print(aniversarios)"
+      ]
     }
-  ]
+  ],
+  "metadata": {
+    "colab": {
+      "name": "PL_Python_1_exercicio.ipynb",
+      "provenance": []
+    },
+    "kernelspec": {
+      "display_name": "Python 3",
+      "name": "python3"
+    },
+    "language_info": {
+      "codemirror_mode": {
+        "name": "ipython",
+        "version": 3
+      },
+      "file_extension": ".py",
+      "mimetype": "text/x-python",
+      "name": "python",
+      "nbconvert_exporter": "python",
+      "pygments_lexer": "ipython3",
+      "version": "3.9.12"
+    }
+  },
+  "nbformat": 4,
+  "nbformat_minor": 0
 }
