--- a/PL_Python_4_exercicio.ipynb
+++ b/PL_Python_4_exercicio.ipynb
@@ -1,27 +1,10 @@
 {
-  "nbformat": 4,
-  "nbformat_minor": 0,
-  "metadata": {
-    "colab": {
-      "name": "PL_Python_4_exercicio.ipynb",
-      "provenance": [],
-      "collapsed_sections": [],
-      "include_colab_link": true
-    },
-    "kernelspec": {
-      "name": "python3",
-      "display_name": "Python 3"
-    },
-    "language_info": {
-      "name": "python"
-    }
-  },
   "cells": [
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "view-in-github",
-        "colab_type": "text"
+        "colab_type": "text",
+        "id": "view-in-github"
       },
       "source": [
         "<a href=\"https://colab.research.google.com/github/Rogerio-mack/Ling-de-Prog-para-Ciencia-de-Dados/blob/main/PL_Python_4_exercicio.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
@@ -64,18 +47,18 @@
     },
     {
       "cell_type": "code",
+      "execution_count": 1,
       "metadata": {
         "id": "-sQD_AuCkWp8"
       },
+      "outputs": [],
       "source": [
         "import numpy as np\n",
         "import pandas as pd\n",
         "import matplotlib.pyplot as plt\n",
         "%matplotlib inline\n",
         "import seaborn as sns"
-      ],
-      "execution_count": 103,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "markdown",
@@ -90,6 +73,7 @@
     },
     {
       "cell_type": "code",
+      "execution_count": 2,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -98,16 +82,8 @@
         "id": "1IgZTqak5ajs",
         "outputId": "ccc01287-1dc1-4bce-feb0-5fbc27d0d30d"
       },
-      "source": [
-        "WHO = pd.read_csv('https://raw.githubusercontent.com/Rogerio-mack/Visualizacao-de-Dados-em-Python/main/data/Life_Expectancy_Data.csv')\n",
-        "WHO.rename(columns={' BMI ':'BMI', 'Life expectancy ':'Life_expectancy'}, inplace=True)\n",
-        "WHO = WHO[ WHO.Year == 2015 ]\n",
-        "WHO.head()"
-      ],
-      "execution_count": 104,
       "outputs": [
         {
-          "output_type": "execute_result",
           "data": {
             "text/html": [
               "<div>\n",
@@ -138,8 +114,7 @@
               "      <th>percentage expenditure</th>\n",
               "      <th>Hepatitis B</th>\n",
               "      <th>Measles</th>\n",
-              "      <th>BMI</th>\n",
-              "      <th>under-five deaths</th>\n",
+              "      <th>...</th>\n",
               "      <th>Polio</th>\n",
               "      <th>Total expenditure</th>\n",
               "      <th>Diphtheria</th>\n",
@@ -165,8 +140,7 @@
               "      <td>71.279624</td>\n",
               "      <td>65.0</td>\n",
               "      <td>1154</td>\n",
-              "      <td>19.1</td>\n",
-              "      <td>83</td>\n",
+              "      <td>...</td>\n",
               "      <td>6.0</td>\n",
               "      <td>8.16</td>\n",
               "      <td>65.0</td>\n",
@@ -190,8 +164,7 @@
               "      <td>364.975229</td>\n",
               "      <td>99.0</td>\n",
               "      <td>0</td>\n",
-              "      <td>58.0</td>\n",
-              "      <td>0</td>\n",
+              "      <td>...</td>\n",
               "      <td>99.0</td>\n",
               "      <td>6.00</td>\n",
               "      <td>99.0</td>\n",
@@ -215,8 +188,7 @@
               "      <td>0.000000</td>\n",
               "      <td>95.0</td>\n",
               "      <td>63</td>\n",
-              "      <td>59.5</td>\n",
-              "      <td>24</td>\n",
+              "      <td>...</td>\n",
               "      <td>95.0</td>\n",
               "      <td>NaN</td>\n",
               "      <td>95.0</td>\n",
@@ -240,8 +212,7 @@
               "      <td>0.000000</td>\n",
               "      <td>64.0</td>\n",
               "      <td>118</td>\n",
-              "      <td>23.3</td>\n",
-              "      <td>98</td>\n",
+              "      <td>...</td>\n",
               "      <td>7.0</td>\n",
               "      <td>NaN</td>\n",
               "      <td>64.0</td>\n",
@@ -265,8 +236,7 @@
               "      <td>0.000000</td>\n",
               "      <td>99.0</td>\n",
               "      <td>0</td>\n",
-              "      <td>47.7</td>\n",
-              "      <td>0</td>\n",
+              "      <td>...</td>\n",
               "      <td>86.0</td>\n",
               "      <td>NaN</td>\n",
               "      <td>99.0</td>\n",
@@ -280,24 +250,58 @@
               "    </tr>\n",
               "  </tbody>\n",
               "</table>\n",
+              "<p>5 rows × 22 columns</p>\n",
               "</div>"
             ],
             "text/plain": [
-              "                Country  Year  ... Income composition of resources  Schooling\n",
-              "0           Afghanistan  2015  ...                           0.479       10.1\n",
-              "16              Albania  2015  ...                           0.762       14.2\n",
-              "32              Algeria  2015  ...                           0.743       14.4\n",
-              "48               Angola  2015  ...                           0.531       11.4\n",
-              "64  Antigua and Barbuda  2015  ...                           0.784       13.9\n",
+              "                Country  Year      Status  Life_expectancy  Adult Mortality  \\\n",
+              "0           Afghanistan  2015  Developing             65.0            263.0   \n",
+              "16              Albania  2015  Developing             77.8             74.0   \n",
+              "32              Algeria  2015  Developing             75.6             19.0   \n",
+              "48               Angola  2015  Developing             52.4            335.0   \n",
+              "64  Antigua and Barbuda  2015  Developing             76.4             13.0   \n",
+              "\n",
+              "    infant deaths  Alcohol  percentage expenditure  Hepatitis B  Measles   \\\n",
+              "0              62     0.01               71.279624         65.0      1154   \n",
+              "16              0     4.60              364.975229         99.0         0   \n",
+              "32             21      NaN                0.000000         95.0        63   \n",
+              "48             66      NaN                0.000000         64.0       118   \n",
+              "64              0      NaN                0.000000         99.0         0   \n",
+              "\n",
+              "    ...  Polio  Total expenditure  Diphtheria    HIV/AIDS           GDP  \\\n",
+              "0   ...    6.0               8.16         65.0        0.1    584.259210   \n",
+              "16  ...   99.0               6.00         99.0        0.1   3954.227830   \n",
+              "32  ...   95.0                NaN         95.0        0.1   4132.762920   \n",
+              "48  ...    7.0                NaN         64.0        1.9   3695.793748   \n",
+              "64  ...   86.0                NaN         99.0        0.2  13566.954100   \n",
+              "\n",
+              "    Population   thinness  1-19 years   thinness 5-9 years  \\\n",
+              "0   33736494.0                   17.2                 17.3   \n",
+              "16     28873.0                    1.2                  1.3   \n",
+              "32  39871528.0                    6.0                  5.8   \n",
+              "48   2785935.0                    8.3                  8.2   \n",
+              "64         NaN                    3.3                  3.3   \n",
+              "\n",
+              "    Income composition of resources  Schooling  \n",
+              "0                             0.479       10.1  \n",
+              "16                            0.762       14.2  \n",
+              "32                            0.743       14.4  \n",
+              "48                            0.531       11.4  \n",
+              "64                            0.784       13.9  \n",
               "\n",
               "[5 rows x 22 columns]"
             ]
           },
-          "metadata": {
-            "tags": []
-          },
-          "execution_count": 104
+          "execution_count": 2,
+          "metadata": {},
+          "output_type": "execute_result"
         }
+      ],
+      "source": [
+        "WHO = pd.read_csv('https://raw.githubusercontent.com/Rogerio-mack/Visualizacao-de-Dados-em-Python/main/data/Life_Expectancy_Data.csv')\n",
+        "WHO.rename(columns={' BMI ':'BMI', 'Life expectancy ':'Life_expectancy'}, inplace=True)\n",
+        "WHO = WHO[ WHO.Year == 2015 ]\n",
+        "WHO.head()"
       ]
     },
     {
@@ -313,14 +317,29 @@
     },
     {
       "cell_type": "code",
+      "execution_count": 10,
       "metadata": {
         "id": "fRHY5L195lOj"
       },
-      "source": [
-        "# Seu código"
+      "outputs": [
+        {
+          "data": {
+            "text/plain": [
+              "Year     2015.00000\n",
+              "Polio      83.20765\n",
+              "dtype: float64"
+            ]
+          },
+          "execution_count": 10,
+          "metadata": {},
+          "output_type": "execute_result"
+        }
       ],
-      "execution_count": null,
-      "outputs": []
+      "source": [
+        "# Seu código\n",
+        "\n",
+        "WHO[['Year','Polio']].mean()\n"
+      ]
     },
     {
       "cell_type": "markdown",
@@ -337,14 +356,14 @@
     },
     {
       "cell_type": "code",
+      "execution_count": null,
       "metadata": {
         "id": "pgulq3tJMJ_R"
       },
+      "outputs": [],
       "source": [
         "# Seu código"
-      ],
-      "execution_count": null,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "markdown",
@@ -359,14 +378,14 @@
     },
     {
       "cell_type": "code",
+      "execution_count": null,
       "metadata": {
         "id": "FjY7MDViMLdc"
       },
+      "outputs": [],
       "source": [
         "# Seu código"
-      ],
-      "execution_count": null,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "markdown",
@@ -381,14 +400,14 @@
     },
     {
       "cell_type": "code",
+      "execution_count": null,
       "metadata": {
         "id": "RWxUK-s3MMiT"
       },
+      "outputs": [],
       "source": [
         "# Seu código"
-      ],
-      "execution_count": null,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "markdown",
@@ -403,14 +422,40 @@
     },
     {
       "cell_type": "code",
+      "execution_count": null,
       "metadata": {
         "id": "2fheoxdEMNaQ"
       },
+      "outputs": [],
       "source": [
         "# Seu código"
-      ],
-      "execution_count": null,
-      "outputs": []
+      ]
     }
-  ]
+  ],
+  "metadata": {
+    "colab": {
+      "collapsed_sections": [],
+      "include_colab_link": true,
+      "name": "PL_Python_4_exercicio.ipynb",
+      "provenance": []
+    },
+    "kernelspec": {
+      "display_name": "Python 3",
+      "name": "python3"
+    },
+    "language_info": {
+      "codemirror_mode": {
+        "name": "ipython",
+        "version": 3
+      },
+      "file_extension": ".py",
+      "mimetype": "text/x-python",
+      "name": "python",
+      "nbconvert_exporter": "python",
+      "pygments_lexer": "ipython3",
+      "version": "3.9.12"
+    }
+  },
+  "nbformat": 4,
+  "nbformat_minor": 0
 }
